--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@turf/boolean-point-in-polygon": "^6.5.0",
     "antd": "^5.12.7",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
